# rust-wordle

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: history.rs  input.rs  main.rs  visuals.rs  words.rs
