[package]
name = "rust-wordle"
version = "0.2.3"
edition = "2021"
homepage = "https://github.com/shayan-shojaei/rust-wordle"
repository = "https://github.com/shayan-shojaei/rust-wordle"
description = "Wordle in your terminal!"
license-file = "LICENSE"
keywords = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.8.4"
